ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-site/css/base.css
/* ... */
.arrow-right {
    transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

.arrow-down {
    transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}

.arrow-left {
    transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
}

.icon-triangle {
    /*
    Removed by German and Replaced with below code to fix icon triangle display in drop down lists (DE2594)
    
    right: 10px; 
    top: 7px; 
    font-size: 11px; 
    position: absolute; 
    background-position: -777px -49px; 
    width: 12px; 
    height: 7px;   */
    padding-right: 7px;
    padding-left: 7px;
    width: auto;
    top: 0;
    left: 0;
    font-size: 11px;
    position: relative;
    background-position: -701px -47px;
}

.arrow-link-txt i {
    top: -1px;
    width: 6px;
    height: 6px;
    margin: 0 3px 0 0;
    border-color: #0097a9;
}

.btn-primary:hover {
    background-color: #0097a9;
    border-color: #027886;
}

.bgnd-green {
    background-color: #00b140;
}

.owl-carousel .owl-item img {
    width: inherit;
}

.owl-carousel {
    padding: 0 70px
}

.owl-theme .owl-nav [class*='owl-'] {
    width: 40px;
    height: 40px;
    background-color: #0097a9;
    display: inline-block;
    position: absolute;
    top: 112px;
    border-radius: 100px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    font-size: 0px;
}

.owl-theme .owl-nav [class*='owl-']:hover {
    background: #0097a9;
    color: #FFF;
    text-decoration: none;
}

.owl-theme .owl-nav .owl-prev {
    left: 0;
}

.owl-theme .owl-nav .owl-next {
    right: 0;
}

.owl-prev:after,
.owl-next:after {
    position: absolute;
    width: 13px;
    height: 13px;
    content: '';
    border-top: solid #fff 3px;
    border-right: solid #fff 3px;
    top: 13px;
}

.owl-next:after {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    left: 12px;
}

.owl-prev:after {
    transform: rotate(-140deg);
    -webkit-transform: rotate(-140deg);
    -moz-transform: rotate(-140deg);
    left: 16px;
}

.flex-box {
    display: flex;
}

.flex-box div {
    align-items: end
}

.carousel-image,
.carousel-image-single {
    padding-right: 10px;
}

.tile-img {
    padding-right: 10px;
}

.carousel-description p {
    margin-top: 5px;
}

.carousel-description,
.carousel-description-single,
.tile-desc {
    position: relative;
}

.carousel-item {
    margin-left: 30px;
    flex: 1;
}

.carousel .flex div {
    align-items: end
}

.tiles-wrapper {
    display: flex;
    flex-wrap: wrap;
}

.tile {
    flex: 1;
    min-width: 50%;
}

.tile:nth-child(odd) {
    padding-right: 50px;
}

.tile-inner {
    display: flex;
}

.description p {
    margin: 0 0 45px 0;
}

.carousel-item:first-child {
    margin-left: 0;
}

.flex-buttons {
    display: flex;
    margin-top: 10px;
}

.flex-buttons>div {
    margin-right: 20px;
}

.carousel h3 {
    padding-bottom: 15px;
}

.image-col {
    /* width: 326px; coomented by Davinder to fix bug */
	width: 364px; /* Added by Davinder */
    height: 265px;
}

.image-col img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.news-large-header {
    font-size: 36px;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', arial, Helvetica;
    /* added by Naresh to fix bug */
    font-stretch: normal;
    line-height: 1.1;
    letter-spacing: normal;
    text-align: left;
    /*margin: 25px 0 0 0; Commended by Naresh to fix bug*/
}

.news-date {
    font-size: 24px;
    font-family: myriad-pro, 'MyriadPro-It', arial, Helvetica;
    opacity: 0.7;
    font-style: italic;
    margin-bottom: 48px;
    /* updated by Naresh for fixing a defect */
    color: #97999B;
    /* added by Naresh for fixing a defect */
}

.news-sub-header {
    font-size: 20px;
    color: #426DA9;
    font-family: myriad-pro, 'MyriadPro-It', arial, Helvetica;
    padding-top: 20px;
}

h1 {
    font-size: 48px;
    font-style: italic;
    line-height: 55px;
    font-weight: lighter;
    margin: 0;
    color: #24509a;
}

h2 {
    font-size: 36px;
    color: #24509a;
    font-style: italic;
    margin: 0;
}

h3 {
    font-size: 28px;
    color: #24509a;
    margin: 0;
    padding-bottom: 15px;
    /* Added by Naresh, as all H3 should have 15 px below it, as per style guide */
}

h4 {
    font-size: 24px;
    color: #24509a;
}

h5 {
    font-size: 15px;
    color: #24509a;
    margin: 0;
    letter-spacing: 1.7px;
    font-weight: bold;
}

h6 {
    font-size: 15px;
    color: #24509a;
    margin: 0;
    letter-spacing: 1.7px;
    font-weight: bold;
}


.thin-border {
    border-top: none;
    border-bottom: solid 1px #e1e6ee;
    margin-top: 15px;
    margin-bottom: 15px;
}

.dashed-border {
    border-top: none;
    border-bottom: dashed 1px #97999B;
    margin-top: 15px;
    margin-bottom: 15px;
    /* Updated by Narehs to 15px for bug fix*/
}


label {
    font-weight: normal;
}

.button-label {
    font-size: 15px;
    color: #24509a;
    margin: 0;
    padding: 0;
    letter-spacing: 1.7px;
    font-weight: bold;
    display: block;
    text-align: left;
    text-transform: uppercase;
    /*Added by naresh to fix a bug */
}

.embeded-video .light-txt {
    padding-bottom: 0;
    margin-bottom: 0
}

.iframe {
    height: 423px;
}

.iframe iframe {
    width: 100%;
    height: 100%;
}

.caption {
    font-size: 14px;
    font-family: myriad-pro, 'MyriadPro-It', arial, Helvetica;
    font-style: italic;
}




/* Commented by Naresh, as we don't want padding on top, let H3 above it add the padding
.image-wrape {
    padding-top: 20px;
}*/

.image-wrape img {
    float: left;
    padding: 0 30px 0 0;
    /* Naresh - no padding needed for bottom*/
}



/*
.image-wrape p {
    margin: 0 0 30px 0;
}
/* ... */

